new changes , added metrics and readme and how to read the data

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-KITE_ACCESS_TOKEN=
-KITE_API_KEY=
-KITE_API_SECRET=
+KITE_ACCESS_TOKEN=1oULhulHIi5KNlQ0ysC0zIY273z5WSV8
+KITE_API_KEY=mk3aetf2n915zpuw
+KITE_API_SECRET=anzvgaxvjbb0o1r50aox70gvswwqgocg
